[gd_scene load_steps=10 format=3 uid="uid://dyrbp4wofjrr8"]

[ext_resource type="Script" path="res://mob.gd" id="1_3u1ah"]
[ext_resource type="Texture2D" uid="uid://dj0a7fyi11ue5" path="res://art/enemyFlyingAlt_1.png" id="1_lafc1"]
[ext_resource type="Texture2D" uid="uid://bht6bxf3wpf5j" path="res://art/enemyFlyingAlt_2.png" id="2_b80pi"]
[ext_resource type="Texture2D" uid="uid://db3ngjmo88utg" path="res://art/enemySwimming_1.png" id="3_x85ba"]
[ext_resource type="Texture2D" uid="uid://h41yixbp6cmi" path="res://art/enemySwimming_2.png" id="4_t82p3"]
[ext_resource type="Texture2D" uid="uid://blbkvdfkeqmrt" path="res://art/enemyWalking_1.png" id="5_3i5pt"]
[ext_resource type="Texture2D" uid="uid://nh2s43oeox2x" path="res://art/enemyWalking_2.png" id="6_mhkq6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rjk0i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lafc1")
}, {
"duration": 1.0,
"texture": ExtResource("2_b80pi")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_x85ba")
}, {
"duration": 1.0,
"texture": ExtResource("4_t82p3")
}],
"loop": true,
"name": &"swim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3i5pt")
}, {
"duration": 1.0,
"texture": ExtResource("6_mhkq6")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gsnu7"]
radius = 43.0
height = 110.0

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
position = Vector2(31, 22)
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_3u1ah")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_rjk0i")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
shape = SubResource("CapsuleShape2D_gsnu7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="removed_mob" from="." to="." method="_on_removed_mob"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
